[gd_scene load_steps=2 format=3 uid="uid://ct8vvyumfdwrf"]

[ext_resource type="Script" uid="uid://b6tynjjxx54ef" path="res://Scripts/file_explorer.gd" id="1_eaqky"]

[node name="FileExplorer" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0130191, 0.339681, 0.470321, 1)
script = ExtResource("1_eaqky")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Content" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackFolder" type="Button" parent="VBoxContainer/Content"]
visible = false
layout_mode = 2
text = "Back Folder"

[node name="NewFolder" type="Button" parent="VBoxContainer/Content"]
layout_mode = 2
text = "New Folder"

[node name="UpFolder" type="Button" parent="VBoxContainer/Content"]
layout_mode = 2
text = "Up Folder"

[node name="Pinned" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="File" type="Control" parent="."]
anchors_preset = 0
offset_left = 371.0
offset_top = 656.0
offset_right = 411.0
offset_bottom = 696.0
scale = Vector2(1.158, 1.158)

[node name="Label" type="Label" parent="File"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Path:"

[node name="Open" type="Button" parent="File"]
layout_mode = 0
offset_left = 647.0
offset_top = -2.0
offset_right = 697.0
offset_bottom = 29.0
text = "Open"

[node name="Cancel" type="Button" parent="File"]
layout_mode = 0
offset_left = 707.0
offset_top = -2.0
offset_right = 767.0
offset_bottom = 29.0
text = "Cancel"

[node name="FilePath" type="TextEdit" parent="File"]
layout_mode = 0
offset_left = 48.0
offset_top = -6.0
offset_right = 639.0
offset_bottom = 34.0
placeholder_text = "Path"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 306.0
offset_right = 357.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 306.0
offset_top = 597.0
offset_right = 1280.0
offset_bottom = 637.0
color = Color(0, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 359.0
offset_right = 1280.0
offset_bottom = 597.0

[node name="Container" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="AddFolder" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -487.0
offset_top = -78.0
offset_right = 487.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.272445, 0.752145, 0.988034, 1)

[node name="CreateFolder" type="Button" parent="AddFolder"]
layout_mode = 0
offset_left = 780.0
offset_top = 117.0
offset_right = 872.0
offset_bottom = 148.0
text = "Create Folder"

[node name="Cancel" type="Button" parent="AddFolder"]
layout_mode = 0
offset_left = 901.0
offset_top = 117.0
offset_right = 961.0
offset_bottom = 148.0
text = "Cancel"

[node name="FolderName" type="TextEdit" parent="AddFolder"]
layout_mode = 0
offset_left = 45.0
offset_top = 65.0
offset_right = 935.0
offset_bottom = 105.0
placeholder_text = "Folder Name
"

[node name="Label" type="Label" parent="AddFolder"]
layout_mode = 0
offset_left = 346.0
offset_right = 434.0
offset_bottom = 23.0
scale = Vector2(2.73077, 2.73077)
text = "New Folder"

[connection signal="pressed" from="VBoxContainer/Content/NewFolder" to="." method="_on_new_folder_pressed"]
[connection signal="pressed" from="VBoxContainer/Content/UpFolder" to="." method="_on_up_folder_pressed"]
[connection signal="pressed" from="File/Open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="File/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="AddFolder/CreateFolder" to="." method="_on_create_folder_pressed"]
[connection signal="pressed" from="AddFolder/Cancel" to="." method="_on_cancel_new_folder_pressed"]
